--- a/HTML_Image_Mapping/index.html
+++ b/HTML_Image_Mapping/index.html
@@ -18,15 +18,15 @@
     </div>   
     <div class = "fld"><img src="cricket.jpg" class = "field" usemap="#mapfile"></div>
     <map name="mapfile">
-        <area shape="circle" coords="352,196,15" href="wicketkeeper.html" alt="">
-        <area shape="circle" coords="297,381,15" href="midoff.html" alt="">
-        <area shape="circle" coords="426,303,15" href="midwicket.html" alt="">
-        <area shape="circle" coords="426,171,15" href="fineleg.html" alt="">
+        <area shape="circle" coords="352,196,15" href="wicketkeeper.html" alt="" target = "x">
+        <area shape="circle" coords="297,381,15" href="midoff.html" alt="" target = "x">
+        <area shape="circle" coords="426,303,15" href="midwicket.html" alt="" target = "x">
+        <area shape="circle" coords="426,171,15" href="fineleg.html" alt="" target = "x">
     </map>
 
 
     <div class  = "iframes">
-        <iframe src="" style="border:none;" title="Iframe Example"></iframe>    </div>
+        <iframe  name = "x"  height= 800px width= 1600px title="Iframe Example"></iframe>    </div>
     
 </body>
 </html>
